# webcam-rtmp-stream

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  webcam-rtmp-stream.sln
WebcamRtmpStream/: WebcamRtmpStream.c  WebcamRtmpStream.h  WebcamRtmpStream.vcxproj  WebcamRtmpStream.vcxproj.filters
libs/: CMakeLists.txt
